other/label-node-selector/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: label-node-selector
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
