other/label-node-selector/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: label-node-selector
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - script:
        content: |
          kubectl get configmap -n kyverno kyverno -o yaml | sed 's/\[Node\/\*,\*,\*\]//g' | sed 's/\[Node,\*,\*\]//g' | kubectl apply -f -
    - script:
        content: |
          node=$(kubectl get nodes --no-headers | awk '{print $1}' | head -n 1)
          kubectl label node "$node" NodeType=test --overwrite
    - sleep:
        duration: 5s
  - name: step-02
    try:
    - apply:
        file: ../label-node-selector.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - sleep:
        duration: 5s
    - script:
        content: ./label-check.sh
